// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`final-comments GET / should render the redact appellant final comments page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Redact appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <form method="POST" class="govuk-grid-column-two-thirds">
            <p class="govuk-body govuk-!-margin-bottom-0">Original final comments:</p>
            <div id="original-comment" class="govuk-inset-text govuk-!-margin-top-2">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
            </div>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                id="revert-button">Revert to original appellant final comments</button>
            </div>
            <div class="govuk-form-group">
                <label class="govuk-label govuk-label--s" for="redact-textarea">Redacted final comments:</label>
                <textarea class="govuk-textarea" id="redact-textarea"
                name="redactedRepresentation" rows="5" readonly="true">Awaiting final comments review</textarea>
            </div>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                id="redact-button">Redact selected text</button>
                <button type="submit" class="govuk-button govuk-button--secondary"
                data-module="govuk-button" id="undo-button">Undo changes</button>
            </div>
            <p class="govuk-visually-hidden" id="saved-textarea">Awaiting final comments review</p>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </div>
        </form>
    </div>
</main>"
`;

exports[`final-comments GET / should render the redact lpa final comments page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Redact LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <form method="POST" class="govuk-grid-column-two-thirds">
            <p class="govuk-body govuk-!-margin-bottom-0">Original final comments:</p>
            <div id="original-comment" class="govuk-inset-text govuk-!-margin-top-2">
                <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
            </div>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                id="revert-button">Revert to original LPA final comments</button>
            </div>
            <div class="govuk-form-group">
                <label class="govuk-label govuk-label--s" for="redact-textarea">Redacted final comments:</label>
                <textarea class="govuk-textarea" id="redact-textarea"
                name="redactedRepresentation" rows="5" readonly="true">Awaiting final comments review</textarea>
            </div>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                id="redact-button">Redact selected text</button>
                <button type="submit" class="govuk-button govuk-button--secondary"
                data-module="govuk-button" id="undo-button">Undo changes</button>
            </div>
            <p class="govuk-visually-hidden" id="saved-textarea">Awaiting final comments review</p>
            <div class="govuk-button-group">
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </div>
        </form>
    </div>
</main>"
`;
